<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileappsUCU</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_admission">MainActivity</string>
    <string name="title_activity_aboutucu">MainActivity</string>
    <string name="title_activity_graduate">MainActivity</string>
    <string name="title_activity_universitylife">MainActivity</string>
    <string name="au">About UCU</string>
    <string name="as">Admission</string>
    <string name="ug">Under Graduate</string>
    <string name="ul">University Life</string>
    <string name="ABB">A. Break Background</string>
    <string name="UCU">Urdaneta City University stated as rewarding concept of Dr. Pedro T. Orata, world renowned educator and a Ramon Magsaysay awardee to establish an educational complex that will provide basic education in a single compound.</string>
    <string name="MS">Mission &amp; Vision</string>
    <string name="vis">Vision</string>
    <string name="vsn">A transformative, self-reliant, and dynamic university recognized as a center of excellence with globally competitive professional an distinctive capabilities in research, extension , and production</string>
    <string name="mis">Mission</string>
    <string name="msn">A university that shall provide advanced instruction in the field of arts, science, teacher, education , technical and entrepreneuship and establish a strong research culture with active involment in extension and production activities</string>
    <string name="gol">Goals</string>
    <string name="gls">The university aims to contribute to the attainment of national development goals through character building, academic excellence, promotion and enrichment of the Filipino historical and Cultural heritage and preservation of enviroment.</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_mission__vision">Mission_Vision</string>
    <string name="title_activity_goal">GoalActivity</string>
    <string name="title_activity_mission">MissionActivity</string>
    <string name="title_activity_vision">VisionActivity</string>
    <string name="his">History</string>
    <string name="tory">Urdaneta City University (UCU) stated as a rewarding concept of Dr. Pedro T. Orata, world renowed educator and a Ramon Magsaysay awardee to establish  an educational complex that will provide  basic education in a single compound. Its humbled beginning contrast its current status  as a fast growing and local college in the province of Pangasinan. It started maximizing avaible resources to provide education to knowledge -hungry youth and young adults, believing on the principle of EDUCATION FOR ALL.</string>
    <string name="title_activity_post_graduate">PostGraduateActivity</string>
    <string name="textview">TextView</string>
    <string name="gpgp">Graduate &amp; Post Graduate Programs:</string>
    <string name="doct">Doctor of Philosophy Major in Business</string>
    <string name="doc">Doctor of Education in Management</string>
    <string name="Mas">Master of Atrs in Education</string>
    <string name="mastr">Master of Arts in Business Administration</string>
    <string name="art">Master of Arts in Nursing</string>
    <string name="pub">Master of Public Administration</string>
    <string name="health">Master in Public Health</string>
    <string name="up">Undergraduate Programs:</string>
    <string name="bs">Bachelor of Science in Nursing</string>
    <string name="ele">Bachelor in Elementary Education</string>
    <string name="sec">Bachelor in Secondary Education</string>
    <string name="bae">Bachelor of Arts in English</string>
    <string name="comm">Bachelor of Arts in Mass Communication</string>
    <string name="pol">Bachelor of Arts in Political Science</string>
    <string name="it">Bachelor of Science in Information Technology</string>
    <string name="law">Bachelor of Laws</string>
    <string name="title_activity_graduate_program">GraduateProgramActivity</string>
    <string name="title_activity_degree_programs">DegreeProgramsActivity</string>
    <string name="psy">Bachelor of Science in Psychology</string>
    <string name="hrm">Bachelor of Science in Hotel &amp; Restaurant Management</string>
    <string name="tou">Bachelor of Science in Tourism</string>
    <string name="electric">Bachelor of Science in Electrical Engineer</string>
    <string name="civil">Bachelor of Science in Civil Engineer</string>
    <string name="coe">Bachelor of Science in Computer Engineer</string>
    <string name="scie">Bachelor of Science in Electronics and Communication Engineer</string>
    <string name="crim">Bachelor of Science in Criminology</string>
    <string name="bus">Bachelor of Science in Business Administration</string>
    <string name="office">Bachelor of Science in Office Administration</string>
    <string name="accoun">Bachelor of Science in Accountancy</string>
    <string name="social">Bachelor of Science in Social Works</string>
    <string name="library">Bachelor of Science in Library &amp; Information Science</string>
    <string name="phar">Bachelor of Science in Pharmacy</string>
    <string name="arc">Bachelor of Science in Architecture</string>
    <string name="dip">Diploma in Midwifery</string>
    <string name="loma">Diploma in Health Science Education</string>
    <string name="asso">Associate in Caregiver Training</string>
    <string name="act">Associate in Computer Technology</string>
    <string name="tare">Diploma in Computer Secretarial </string>
    <string name="hrs">Diploma in Hotel &amp; Restaurant Services </string>
    <string name="hcs">Health Care Services</string>
    <string name="certificate">Certificate in 3D Maya Animation (new Program)</string>
    <string name="ndp">Non-Degree Programs:</string>

</resources>
